<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:background="#E7EEFB"
    android:visibility="visible"
    tools:context=".MainActivity">


    <LinearLayout

        android:id="@+id/topBar"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:background="#E7EEFB"

        android:gravity="center"

        android:orientation="horizontal"

        android:padding="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout

            android:layout_width="0dp"

            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:orientation="vertical"
            android:padding="1dp">


            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:background="#00FF0000"

                android:fontFamily="@font/materialiconsregular"
                android:text="@string/title"
                android:textColor="#345880"
                android:textSize="22sp" />


            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:fontFamily="@font/materialiconsregular"

                android:text="@string/name"

                android:textColor="#1B4A80"
                android:textSize="32sp" />

        </LinearLayout>

        <ImageView

            android:layout_width="100dp"

            android:layout_height="100dp"

            android:contentDescription="@string/logo_app"

            android:scaleType="fitCenter"

            android:src="@drawable/fce_appbar_logo" />


    </LinearLayout>

    <ScrollView

        android:id="@+id/scrollView"

        android:layout_width="match_parent"

        android:layout_height="0dp"

        android:background="#E7EEFB"

        app:layout_constraintBottom_toTopOf="@id/bottomNavCard"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        tools:ignore="NotSibling">


        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:orientation="vertical"

            android:padding="16dp">


            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginBottom="8dp"

                app:cardCornerRadius="8dp"

                app:cardElevation="4dp">


                <LinearLayout

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:orientation="vertical"

                    android:padding="10dp">


                    <LinearLayout

                        android:layout_width="match_parent"

                        android:layout_height="80dp"

                        android:gravity="center_vertical"

                        android:orientation="horizontal"

                        >


                        <TextView

                            android:layout_width="0dp"

                            android:layout_height="wrap_content"

                            android:layout_weight="1"

                            android:fontFamily="@font/materialiconsregular"

                            android:text="@string/buy_tickets"

                            android:textColor="#272C2B"
                            android:textSize="20sp" />

                        <ImageView

                            android:layout_width="60dp"

                            android:layout_height="60dp"

                            android:layout_marginEnd="8dp"

                            android:contentDescription="@string/home_cart"

                            android:src="@drawable/home_cart_icon" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="#44999191" />

                    <LinearLayout
                        android:id="@+id/urbanTickets"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView

                            android:layout_width="0dp"

                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:fontFamily="@font/materialiconsregular"

                            android:text="@string/urban_tickets"
                            android:textColor="#305983"
                            android:textSize="16sp" />


                        <ImageView

                            android:layout_width="20dp"

                            android:layout_height="20dp"

                            android:contentDescription="@string/arrow_right"

                            android:rotation="-90"

                            android:src="@drawable/arrow_down" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/extraurbanTickets"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="18dp"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView

                            android:layout_width="0dp"

                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:fontFamily="@font/materialiconsregular"

                            android:text="@string/extraurban_tickets"
                            android:textColor="#305983"
                            android:textSize="16sp" />


                        <ImageView

                            android:layout_width="20dp"

                            android:layout_height="20dp"

                            android:contentDescription="@string/arrow_right"

                            android:rotation="-90"

                            android:src="@drawable/arrow_down" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                app:cardCornerRadius="8dp"

                app:cardElevation="4dp">

                <LinearLayout

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:orientation="vertical"

                    android:padding="16dp">


                    <LinearLayout

                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"

                        android:gravity="center_vertical"

                        android:orientation="horizontal">


                        <TextView

                            android:layout_width="0dp"

                            android:layout_height="wrap_content"

                            android:layout_weight="1"

                            android:fontFamily="@font/materialiconsregular"

                            android:text="@string/wallet"

                            android:textColor="#242928"
                            android:textSize="20sp"
                            android:textStyle="normal" />

                        <ImageView

                            android:layout_width="60dp"

                            android:layout_height="60dp"

                            android:layout_marginEnd="8dp"

                            android:contentDescription="@string/home_ticket"

                            android:src="@drawable/home_ticket_icon" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="#44999191" />

                    <LinearLayout

                        android:id="@+id/wallet"

                        android:layout_width="match_parent"

                        android:layout_height="48dp"

                        android:layout_marginTop="8dp"

                        android:clickable="true"

                        android:focusable="true"

                        android:gravity="center_vertical"

                        android:orientation="horizontal">


                        <TextView

                            android:layout_width="0dp"

                            android:layout_height="wrap_content"

                            android:layout_weight="1"

                            android:fontFamily="@font/materialiconsregular"

                            android:text="@string/personal_tickets"
                            android:textColor="#305983"
                            android:textSize="16sp" />


                        <ImageView

                            android:layout_width="20dp"

                            android:layout_height="20dp"

                            android:contentDescription="@string/arrow_right"

                            android:rotation="-90"

                            android:src="@drawable/arrow_down" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                app:cardCornerRadius="8dp"

                app:cardElevation="4dp">

                <LinearLayout

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:orientation="vertical"

                    android:padding="16dp">


                    <LinearLayout

                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"

                        android:gravity="center_vertical"

                        android:orientation="horizontal">


                        <TextView

                            android:layout_width="0dp"

                            android:layout_height="wrap_content"

                            android:layout_weight="1"

                            android:fontFamily="@font/materialiconsregular"

                            android:text="@string/infomobility"

                            android:textColor="#333837"
                            android:textSize="20sp"
                            android:textStyle="normal" />

                        <ImageView

                            android:layout_width="60dp"

                            android:layout_height="60dp"

                            android:layout_marginEnd="8dp"

                            android:contentDescription="@string/home_infomobility"

                            android:src="@drawable/icoinfomobilita" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="#44999191" />

                    <LinearLayout

                        android:id="@+id/info"

                        android:layout_width="match_parent"

                        android:layout_height="48dp"

                        android:layout_marginTop="8dp"

                        android:clickable="true"

                        android:focusable="true"

                        android:gravity="center_vertical"

                        android:orientation="horizontal">


                        <TextView

                            android:layout_width="0dp"

                            android:layout_height="wrap_content"

                            android:layout_weight="1"

                            android:fontFamily="@font/materialiconsregular"

                            android:text="@string/access_infomobility"
                            android:textColor="#305983"
                            android:textSize="16sp" />


                        <ImageView

                            android:layout_width="20dp"

                            android:layout_height="20dp"

                            android:contentDescription="@string/arrow_right"

                            android:rotation="-90"

                            android:src="@drawable/arrow_down" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomNavCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1C477C"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/homeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/home_button"
                    android:src="@drawable/home_bottom_navigation_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/materialiconsregular"
                    android:text="@string/home"
                    android:textColor="#DDE5EA" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/purchaseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/purchase_button"
                    android:src="@drawable/purchase_bottom_navigation_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/materialiconsregular"
                    android:text="@string/purchase"
                    android:textColor="#DDE5EA" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ticketButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/bottom_ticket"
                    android:src="@drawable/tickets_bottom_navigation_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/materialiconsregular"
                    android:text="@string/tickets"
                    android:textColor="#DDE5EA" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/materialiconsregular"
                    android:contentDescription="@string/menu_button"
                    android:src="@drawable/menu_bottom_navigation_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu"
                    android:textColor="#DDE5EA" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>