<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletActivity">

    <LinearLayout

        android:id="@+id/topBar"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:background="#E7EEFB"

        android:gravity="center"

        android:orientation="horizontal"

        android:padding="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout

            android:layout_width="0dp"

            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:orientation="vertical"
            android:padding="1dp">


            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:background="#00FF0000"

                android:fontFamily="@font/materialiconsregular"
                android:text="@string/title"
                android:textColor="#345880"
                android:textSize="22sp" />


            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:fontFamily="@font/materialiconsregular"

                android:text="@string/name"

                android:textColor="#1B4A80"
                android:textSize="32sp" />

        </LinearLayout>


        <ImageView

            android:layout_width="100dp"

            android:layout_height="100dp"

            android:contentDescription="@string/logo_app"

            android:scaleType="fitCenter"

            android:src="@drawable/fce_appbar_logo" />


    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:touchscreenBlocksFocus="false"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:tabGravity="fill"
        app:tabIndicatorAnimationMode="linear"
        app:tabIndicatorColor="@color/wallet_tab_color"
        app:tabIndicatorFullWidth="false"
        app:tabMode="fixed"
        app:tabSelectedTextColor="#1A4475"
        app:tabTextAppearance="@style/CustomTabTextStyle">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Da validare"
            style="@style/CustomTabStyle"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="In uso"
            style="@style/CustomTabStyle"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scaduti"
            style="@style/CustomTabStyle"/>


    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="QR Code" />

    <EditText
        android:id="@+id/seedEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="Seed QR"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/qrCodeImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/savedSeedsSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/seedEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Genera QR Code"
        app:layout_constraintTop_toBottomOf="@+id/savedSeedsSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1C477C"
        app:itemIconTint="#FFFFFF"
        app:itemTextColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>